--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <script
+      src="https://apis.google.com/js/api.js"
+      type="text/javascript"
+    ></script>
+
+    <script
+      src="https://accounts.google.com/gsi/client"
+      type="text/javascript"
+    ></script>
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
